test_suite/tests/ui/common/cfg_attr_empty_predicate.stderr
error: expected cfg predicate
 --> tests/ui/common/cfg_attr_empty_predicate.rs:6:14
  |
6 |     cfg_attr(, derive(Clone)),
  |              ^
